Re-add highlight support.